# humaoid-robotic

./: .gitignore  .npmignore  AUTHENTICATION.md  BETTER_AUTH_SETUP.md  COMPLETED.md  IMPLEMENTATION_SUMMARY.md  OAUTH_IMPLEMENTATION.md  OAUTH_SETUP.md  README.md  VERCEL-DEPLOYMENT.md  auth-server.ts  docusaurus.config.js  package-lock.json  package.json  server.ts  sidebar.js  tailwind.config.js  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: README.md  agent.py  api.py  config.py  crawler.py  database.py  embedder.py  init_db.py  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  requirements_slim.txt  run_server.py  start_server.bat  test_implementation.py  vector_store.py  vercel.json
backend/api/: chat.py
backend/models/: chat_history.py
backend/services/: chat_history_service.py  chat_service.py  rag_service.py
backend/tests/: conftest.py  test_agent.py  test_crawler.py  test_e2e.py  test_embedder.py
backend/tests/contract/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/unit/: test_chat_api.py
blog/: 2024-12-07-welcome.md
docs/: authentication-setup.md  chatbot_improvements.md  chatkit_neon_integration.md  intro.md  openrouter_configuration.md
docs/01-intro/: week-01-chapter-1.md  week-02-chapter-2.md
docs/02-ros2/: week-03-chapter-3.md  week-04-chapter-4.md
docs/03-simulation/: week-05-chapter-5.md  week-06-chapter-6.md
docs/04-isaac/: week-07-chapter-7.md  week-08-chapter-8.md
docs/05-vla/: week-09-chapter-9.md  week-10-chapter-10.md
src/css/: custom.css
(+48 files in other folders)
